<resources>
    <string name="app_name">Memoire</string>
    <string name="logo">Memoire</string>
    <string name="app">Memoire</string>
    <string name="username">Username</string>
    <string name="password">PASSWORD</string>
    <string name="entUser">Enter your Username</string>
    <string name="entEmail">Enter your Username</string>
    <string name="email">Enter your Username</string>

    <string name="entEmail1">Enter your Email</string>
    <string name="email1">Enter your Email</string>
    <string name="entPassword">Enter your password</string>
    <string name="dontHaveAcc">Don\'t have an Account? Register Here</string>
    <string name="orLoginWith">OR LOGIN WITH</string>
    <string name="signUpGoogle">Sign in with Google</string>
    <string name="logi">Login</string>
    <string name="StringSearch">Search here..</string>
    <string name="capsulename">Title of Capsule here..</string>

    <!--    Register Strings-->
    <string name="full_name">USERNAME</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAcc">Already have an account? Log in</string>
    <string name="orRegisterWith">or register with</string>
    <string name="confirm_your_password">Confirm your password</string>


    <string name="noBio"></string>


    <string name="add_content">Add Content</string>
    <string name="content_thumbnail_desc">Content thumbnail</string>
    <string name="delete_content">Delete content</string>

    <string name="ready_to_open">Ready to open!</string>
    <string name="time_until_unlock">Time until unlock:</string>
    <string name="loading">Loading countdown...</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="set_unlock_date_time"><![CDATA[Set Unlock Date & Time]]></string>


    <!-- Notification Titles -->
    <string name="notification_title_friend_request">New Friend Request</string>
    <string name="notification_title_friend_request_accepted">Friend Request Accepted</string>
    <string name="notification_title_time_capsule_open">Time Capsule Opened</string>
    <string name="notification_title_comment">New Comment</string>
    <string name="notification_title_reaction">New Reaction</string>
    <string name="notification_title_mention">You Were Mentioned</string>
    <string name="notification_title_default">New Notification</string>

    <!-- Time Ago Strings -->
    <string name="just_now">just now</string>
    <string name="channel_name">Notif\n</string>
    <string name="channel_description">desc</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_description">notif</string>
    <string name="default_notification_channel_name">Notification Channel\n</string>
    <string name="accept">Accept\n</string>
    <string name="decline">Decline</string>
    <string name="new_notification">New Notification</string>
    <plurals name="minutes_ago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
